--- a/confd/templates/haproxy.tmpl
+++ b/confd/templates/haproxy.tmpl
@@ -22,28 +22,28 @@ defaults
     timeout connect 5000
     timeout client 50000
     timeout server 50000
-    errorfile 400 /etc/haproxy/errors/400.http
-    errorfile 403 /etc/haproxy/errors/403.http
-    errorfile 408 /etc/haproxy/errors/408.http
-    errorfile 500 /etc/haproxy/errors/500.http
-    errorfile 502 /etc/haproxy/errors/502.http
-    errorfile 503 /etc/haproxy/errors/503.http
-    errorfile 504 /etc/haproxy/errors/504.http
+    errorfile 400 /usr/local/etc/haproxy/errors/400.http
+    errorfile 403 /usr/local/etc/haproxy/errors/403.http
+    errorfile 408 /usr/local/etc/haproxy/errors/408.http
+    errorfile 500 /usr/local/etc/haproxy/errors/500.http
+    errorfile 502 /usr/local/etc/haproxy/errors/502.http
+    errorfile 503 /usr/local/etc/haproxy/errors/503.http
+    errorfile 504 /usr/local/etc/haproxy/errors/504.http
 
 frontend http-in
     bind *:8080
-  
+
     {{range $service := ls "/services"}}
-    
+
     {{$key := printf "/services/%s/domain" $service}}  {{if exists $key}}
     acl host_{{$service}} hdr(host) -i {{getv $key}}
     {{end}}
     {{$key := printf "/services/%s/url_reg" $service}}  {{if exists $key}}
     acl host_{{$service}} url_reg -i {{getv $key}}
-    {{end}}  
+    {{end}}
     acl {{$service}}_health path_beg /ping
     {{end}}
-    
+
     {{range $service := ls "/services"}}
     use_backend {{$service}} if host_{{$service}}
     use_backend {{$service}} if {{$service}}_health
@@ -75,10 +75,10 @@ listen MyStats
     stats refresh 5s
     stats show-node
     stats show-legends
-    
+
     # if authentication is wanted
     acl auth_ok http_auth(stats-auth)
     http-request auth unless auth_ok
- 
+
 userlist stats-auth
     user admin insecure-password p4ss
